# AdvancedComputingProject

Final-project/: CMakeLists.txt  Final Project description.docx
Final-project/include/: OrderBook.hpp  StopWatch.hpp
Final-project/src/: main_client.cpp  main_server.cpp
Homework 5/Part 1/: CMakeLists.txt  main.cpp  robinhood_hash_table.h
Homework 5/Part 2/: CMakeLists.txt  main_pq.cpp  order_pq.h
Homework 5/Part 3/: CMakeLists.txt  main_ts.cpp  time_series.h
Homework 5/Part 4/: CMakeLists.txt  main_ob.cpp  order_book.h
Part1/: CMakeLists.txt  README.md  main.cpp
Part1/include/: Matrix.hpp  MatrixFunctions.hpp  Vector.hpp
Part2/: CMakeLists.txt  hft_client.cpp  strategy.md
Part3/: CMakeLists.txt  main.cpp
Part3/include/: market_snapshot.h
Phase 1/: lin_alg.cpp
Phase 1/Part 1/: linalg.cpp  linalg.ilk
Phase 1/Part 2/Benchmark/: benchmark.cpp  benchmark.ilk
Phase 1/Part 2/Cache Analysis/: cache.cpp  cache.ilk
Phase 1/Part 2/Inlining/: inline.cpp  inline.ilk
Phase 1/Part 2/Memory/: linalg_memory.cpp  memory.cpp  memory.ilk
Phase 1/Part 2/Optimized/: optimize.cpp  optimize.ilk
Phase 3/: README  main.cpp  market_snapshot.cpp  market_snapshot.h  order_manager.cpp  order_manager.h  sample_feed
Phase4/: CMakeLists.txt  README.md  config.h.in
Phase4/include/: LatencyAnalyzer.hpp  MarketData.hpp  MatchingEngine.hpp  MemoryPool.hpp  Order.hpp  OrderBook.hpp  OrderManager.hpp  Timer.hpp  TradeLogger.hpp
Phase4/src/: LatencyAnalyzer.cpp  MarketData.cpp  MatchingEngine.cpp  MemoryPool.cpp  OrderBook.cpp  OrderManager.cpp  TradeLogger.cpp  main.cpp
Phase4/test/: test_latency.cpp
Phase5/: CMakeLists.txt  order_book.cpp  priority_queue.cpp  robin_hood_hashing.cpp  robin_hood_hashing.md  time_series.cpp
Phase5-HFT-order-book/order_book/: CMakeLists.txt  README.md  benchmark.ipynb
Phase5-HFT-order-book/order_book/include/: benchmark.hpp  optimized_orderbook.hpp  order.hpp  orderbook.hpp  unit_tests.hpp
Phase5-HFT-order-book/order_book/src/: main.cpp
Session 7/: Analytics.hpp  CMakeLists.txt  ConcurrentQueue.hpp  Log.hpp  OrderProcessing.hpp  main.cpp
